<resources>
    <string name="app_name">QuickMafs</string>

    <!-- Main-->
    <string name="btn_start_game">Start spill</string>

    <!-- Statistic -->
    <string name="date">Dato:</string>
    <string name="time">Tid:</string>

    <!-- Preferences -->
    <string name="question_amount">Antall spørsmål per spill</string>
    <string name="lang_norsk">Norsk(Norwegisch)</string>
    <string name="lang_tysk">Tysk(Deutsch)</string>
    <string name="option_5" translatable="false">5</string>
    <string name="option_10" translatable="false">10</string>
    <string name="option_25" translatable="false">25</string>

    <!-- POP UP GAME COMPLETE STRINGS -->
    <string name="gameover">Spillet er slutt</string>
    <string name="newgame">Nytt Spill</string>
    <string name="mainmenu">Hovedmeny</string>

    <!-- POP UP EXIT GAME -->
    <string name="exit_game_text">Er du sikker på at du vil avslutte spillet?</string>

    <!-- POP UP DELETE STAT -->
    <string name="delete">Slett</string>
    <string name="warning">Er du sikker på at du ønsker å slette denne statistikken?</string>

    <!-- GAME STRINGS -->
    <string name="btn_1" translatable="false">1</string>
    <string name="btn_2" translatable="false">2</string>
    <string name="btn_3" translatable="false">3</string>
    <string name="btn_4" translatable="false">4</string>
    <string name="btn_5" translatable="false">5</string>
    <string name="btn_6" translatable="false">6</string>
    <string name="btn_7" translatable="false">7</string>
    <string name="btn_8" translatable="false">8</string>
    <string name="btn_9" translatable="false">9</string>
    <string name="btn_0" translatable="false">0</string>
    <string name="btn_answer" translatable="false">OK</string>
    <string name="btn_back" translatable="false">DEL</string>
    <string name="right">Riktig:</string>
    <string name="wrong">Galt:</string>

    <!-- GAME QUESTIONS -->
    <string-array name="questions">
        <item>Dette er spørsmål 1 blablabla. 2+2</item>
        <item>Dette er spørsmål 2 blablabla. 3+5</item>
        <item>Dette er spørsmål 3 blablabla. 8+4</item>
        <item>Dette er spørsmål 4 blablabla. 2+2</item>
        <item>Dette er spørsmål 5 blablabla. 3+5</item>
        <item>Dette er spørsmål 6 blablabla. 8+4</item>
        <item>Dette er spørsmål 7 blablabla. 2+2</item>
        <item>Dette er spørsmål 8 blablabla. 3+5</item>
        <item>Dette er spørsmål 9 blablabla. 8+4</item>
        <item>Dette er spørsmål 10 blablabla. 2+2</item>
        <item>Dette er spørsmål 11 blablabla. 3+5</item>
        <item>Dette er spørsmål 12 blablabla. 8+4</item>
        <item>Dette er spørsmål 13 blablabla. 2+2</item>
        <item>Dette er spørsmål 14 blablabla. 3+5</item>
        <item>Dette er spørsmål 15 blablabla. 8+4</item>
        <item>Dette er spørsmål 16 blablabla. 2+2</item>
        <item>Dette er spørsmål 17 blablabla. 3+5</item>
        <item>Dette er spørsmål 18 blablabla. 8+4</item>
        <item>Dette er spørsmål 19 blablabla. 2+2</item>
        <item>Dette er spørsmål 20 blablabla. 3+5</item>
        <item>Dette er spørsmål 21 blablabla. 8+4</item>
        <item>Dette er spørsmål 22 blablabla. 2+2</item>
        <item>Dette er spørsmål 23 blablabla. 3+5</item>
        <item>Dette er spørsmål 24 blablabla. 8+4</item>
        <item>Dette er spørsmål 25 blablabla. 8+4</item>
    </string-array>

    <!-- GAME ANSWERS -->
    <integer-array name="answers">
        <item>4</item>
        <item>8</item>
        <item>12</item>
        <item>4</item>
        <item>8</item>
        <item>12</item>
        <item>4</item>
        <item>8</item>
        <item>12</item>
        <item>4</item>
        <item>8</item>
        <item>12</item>
        <item>4</item>
        <item>8</item>
        <item>12</item>
        <item>4</item>
        <item>8</item>
        <item>12</item>
        <item>4</item>
        <item>8</item>
        <item>12</item>
        <item>4</item>
        <item>8</item>
        <item>12</item>
        <item>12</item>
    </integer-array>
</resources>
